--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,8 +1,7 @@
 @charset "UTF-8";
 body {
-  background-color: #f4f4f4;
+  background-color: #F4F4F4;
 }
-
 .container {
   align-items: flex-start;
   display: flex;
@@ -11,7 +10,6 @@ body {
   width: 100%;
   height: 80vh;
 }
-
 .membership-list {
   width: 100%;
   display: flex;
@@ -36,7 +34,6 @@ body {
   height: 250px;
   margin: 20px;
 }
-
 .membership-name {
   font-weight: bolder;
   font-size: 20px;
@@ -59,17 +56,15 @@ body {
 .membership-info h1 {
   font-weight: bolder;
 }
-.membership-info h2 {
+.membership-info h2  {
   margin-left: 10px;
   width: 100%;
 }
-
 .user-img {
   border-radius: 50%;
   width: 50px;
   height: 50px;
 }
-
 /* 08-21 14:53 채승훈 시작 클럽안 내용들*/
 .locationTypeBox {
   font-size: 12px;
@@ -94,24 +89,14 @@ body {
   align-items: center;
   text-align: center;
 }
-
 /* 그냥 박스 상자 */
 /* 08-25 채승훈 추가 */
 .body_img_box_body {
   width: 100%;
   height: 955px;
-  background-color: orange;
-  margin: auto;
-  padding: 90px 20px 20px 20px;
-  max-width: 1520px;
-}
-.body_img_box {
-  width: 100%;
-  height: 500px;
   display: flex;
   justify-content: center;
 }
-
 .body_img {
   width: 100%;
   height: 100%;
@@ -130,79 +115,52 @@ body {
 }
 /*중단 locationLa 이벤트 놈들*/
 #locationLaNameForm input[type="checkbox"] {
-  display: none;
+   display:none;
+ }
+#locationLaNameForm{
+	display:flex;
+	justify-content: space-around;
+	align-self: center;
+	width: 100%;
+	max-width: 1200px;
+	font-size:20px;
+	padding :10px;
+	font-weight: bold;
+	height: 50px;
 }
-#locationLaNameForm {
-  font-size: 20px;
-  padding: 10px;
-  font-weight: bold;
-  height: 50px;
+.locationLaCss{
+	padding: 8px 10px;
+	align-self: center;
+	cursor: pointer;
 }
-
-.locationLaCss {
-  padding: 8px 10px;
-  align-self: center;
-  cursor: pointer;
+.locationLaCss:hover{
+	background-color: rgb(255, 142, 4);
+	border-radius : 20px;
 }
-.locationLaCss:hover {
-  background-color: rgb(255, 142, 4);
-  border-radius: 20px;
+.locLaNameLabel{
+	padding: 8px 10px;
+	align-self: center;
+	cursor: pointer;	
 }
-
-.locLaNameLabel {
-  padding: 8px 10px;
-  align-self: center;
-  cursor: pointer;
+.locLaNameLabel:hover{
+	background-color: rgb(255, 142, 4);
+	border-radius : 20px;
 }
-.locLaNameLabel:hover {
-  background-color: rgb(255, 142, 4);
-  border-radius: 20px;
-}
-
 /*중단 locationLa 이벤트 놈들*/
-
-/*중단 locationS 이벤트 놈들*/
+/*중단 locationType 이벤트 놈들*/
 #locationSNameForm input[type="checkbox"] {
-  display: none;
+   display:none;
+ }
+#locationSNameForm{
+	font-weight: bold;
 }
-#locationSNameForm {
-  font-weight: bold;
+.locationTypeCss{
+	padding:10px 5px;
 }
-.locationTypeCss {
-  padding: 10px 5px;
-}
-
-/*중단 locationS 이벤트 놈들*/
-
-/*증딘 typeLa 이벤트 놈들*/
+/*중단 locationType 이벤트 놈들*/
 #typeLaNameSelect input[type="checkbox"] {
-  display: none;
-}
-#typeLaNameSelect {
-  font-size: 18px;
-  padding: 10px;
-  font-weight: bold;
-  height: 100%;
-}
-.typeLaCss {
-  padding: 0px 10px 0px 10px;
-  cursor: pointer;
-}
-.typeLaCss:hover {
-  background-color: rgb(255, 142, 4);
-  border-radius: 20px;
-}
-#typeLaNameLabel {
-  padding: 0px 10px 0px 10px;
-  cursor: pointer;
-}
-#typeLaNameLabel:hover {
-  background-color: rgb(255, 142, 4);
-  border-radius: 20px;
-}
-
-/*증딘 typeLa 이벤트 놈들*/
-
-#typeSNameForm input[type="checkbox"] {
-  display: none;
-}
+   display:none;
+ }
+ #typeSNameForm input[type="checkbox"] {
+   display:none;
+ }
