--- a/src/main/resources/static/css/userInfo.css
+++ b/src/main/resources/static/css/userInfo.css
@@ -22,6 +22,7 @@ main {
   flex-direction: column;
   padding-top: 50px;
   padding-bottom: 50px;
+  justify-content: center;
 }
 
 .user-img {
@@ -32,7 +33,7 @@ main {
 }
 #rating{
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
 }
 #emoji-plus{
 	color: green;
@@ -50,6 +51,14 @@ main {
 	margin: 0px 10px;
 	cursor: pointer;
 }
+#plus-minus{
+	text-align: center;
+}
+
+#minus-btn{
+	position: relative;
+    top: 6.5px;
+}    
 
 .memberInfo_div h1 {
   font-size: 1.5rem;
