--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 body {
-  background-color: #F4F4F4;
+  background-color: #b0c4b1;
 }
 .container {
   align-items: flex-start;
@@ -25,13 +25,14 @@ body {
   background-color: white;
   border-radius: 20px;
   margin: 20px;
-  width: 550px;
-  height: 300px;
+  width: 480px;
+  height: 250px;
+  border: 2px solid orange;
 }
 .membership-img a img {
   border-radius: 15px;
-  width: 250px;
-  height: 250px;
+  width: 180px;
+  height: 200px;
   margin: 20px;
 }
 .membership-name {
@@ -96,17 +97,50 @@ body {
   height: 955px;
   display: flex;
   justify-content: center;
+  
 }
 .body_img {
   width: 100%;
   height: 100%;
+  z-index: 1000;
+}
+.body_text{
+  position:absolute;
+  width:50%	;
+  height : 500px;
+  display:flex;
+  align-items: flex-start;
+  justify-content:center;
+  z-index: 10;
+  top:200px;
+  left:20%;
+  color: #ffffff;
+  font-size: 20px;
+  font-weight: bold;
+  flex-direction: column;
+  line-height: 80px;
+}
+.body_text p:nth-child(1){
+  font-size: 50px;
+}
+.body_text p:nth-child(2){
+  font-size: 20px;
+}
+.body_text p:nth-child(3){
+  font-size: 20px;
+}
+.body_text p:nth-child(4){
+  line-height: 20px;
+  color :white;
+  opacity : 5;
+  font-size: 14px;
 }
 .locationTypeBody {
   position: sticky;
-  top: 50px;
+  top: 80px;
 }
 .locationTypeBodyBox {
-  background-color: rgb(255, 185, 100);
+  background-color:#14213d;
   width: 100%;
   height: auto;
   display: flex;
@@ -132,6 +166,7 @@ body {
 	padding: 8px 10px;
 	align-self: center;
 	cursor: pointer;
+	color: white;
 }
 .locationLaCss:hover{
 	background-color: rgb(255, 142, 4);
@@ -140,7 +175,8 @@ body {
 .locLaNameLabel{
 	padding: 8px 10px;
 	align-self: center;
-	cursor: pointer;	
+	cursor: pointer;
+	color: white;	
 }
 .locLaNameLabel:hover{
 	background-color: rgb(255, 142, 4);
@@ -156,6 +192,7 @@ body {
 }
 .locationTypeCss{
 	padding:10px 5px;
+	color: white;
 }
 /*중단 locationType 이벤트 놈들*/
 #typeLaNameSelect input[type="checkbox"] {
@@ -164,3 +201,4 @@ body {
  #typeSNameForm input[type="checkbox"] {
    display:none;
  }
+ 
