--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -6,8 +6,8 @@
   position: fixed;
   width: 100%;
   height: 80px;
-  background-color: #ffffff;
-  z-index: 999999;
+  z-index:1000;
+  background-color: white;
 }
 .main_header_body {
   height: 100%;
@@ -17,6 +17,7 @@
   margin: auto;
   width: 100%;
   max-width: 1520px;
+  background-color: white;
 }
 /*헤더 왼쪽*/
 .main_header_left {
@@ -24,24 +25,27 @@
   align-items: center;
   justify-content: flex-start;
   height: 100%;
-  
+  width: 100%;
 }
 .main_header_left a {
   font-size: 18px;
   font-weight: bold;
   margin-right: 15px;
   color : #fca35b;
+  font-family: "Do Hyeon", sans-serif;
 }
 /*헤더 센터*/
 .main_header_center {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   text-align: center;
-  font-size: 50px;
+  font-size: 55px;
   height: 100%;
+  width: 100%;
   font-weight: bold;
   color : #fca35b;
+  font-family: "Do Hyeon", sans-serif;
 }
 .main_header_center_text {
 }
@@ -51,11 +55,13 @@
   align-items: center;
   justify-content: flex-end;
   height: 100%;
+  width: 100%;
   font-size: 18px;
   font-weight: bold;
 }
 .main_header_right a {
   color : #fca35b;
+  font-family: "Do Hyeon", sans-serif;
 }
 
 .main_header_right_menu {
@@ -63,6 +69,8 @@
 
 .main_header_right_nickname {
   margin-right: 10px;
+  color : #fca35b;
+  font-family: "Do Hyeon", sans-serif;
 }
 .main_header_right_user {
   display: flex;
