--- a/src/main/resources/static/css/header2.css
+++ b/src/main/resources/static/css/header2.css
@@ -35,7 +35,7 @@
 /*헤더 센터*/
 .main_header_center {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   text-align: center;
   font-size: 55px;
