--- a/src/main/resources/static/css/locationType.css
+++ b/src/main/resources/static/css/locationType.css
@@ -1,20 +1,37 @@
 .locationTypeBody {
-  position: sticky;
-  top: 80px;
+	padding-top:200px;
+	padding-bottom : 30px;
+	width: 100%;	
 }
-.locationTypeBodyBox {
+.locationTypeBodyBox {	
+	display: flex;
+	margin : auto;
+	justify-content : flex-start;
+	max-width: 1520px;
+	height: 200px;
+/*
+ 수틀리면 다시 복구
   background-color:white;
   width: 100%;
   height: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
+*/
 }
 /*중단 locationLa 이벤트 놈들*/
 #locationLaNameForm input[type="checkbox"] {
    display:none;
  }
 #locationLaNameForm{
+	width: 400px;
+	height : 100%;
+	padding: 10px;
+	background-color : white;
+	border-radius: 20px;
+	border: 1px solid #d5d5d5;
+	margin-right: 30px;
+	/*
 	display:flex;
 	justify-content: space-around;
 	align-self: center;
@@ -24,44 +41,138 @@
 	padding :10px;
 	font-weight: bold;
 	height: 50px;
+	*/
+}
+.locationBoxHead{
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+}
+.locationLaStar{
+	padding: 5px 10px 10px 10px;
+	font-size: 25px;
+	font-weight: bold;
+}
+.locationLaDiv{
+	background-color : #efefef;
+	width: 380px;
+	height: 140px;
+	border-radius: 20px;
+	padding: 10px;
 }
 .locationLaCss{
-	padding: 8px 10px;
-	align-self: center;
 	cursor: pointer;
-	color: black;
-}
-.locationLaCss:hover{
-	background-color:  #fca35b;
-	border-radius : 20px;
 }
 .locLaNameLabel{
-	padding: 8px 10px;
-	align-self: center;
+	font-size : 18px;
+	font-weight: bold;
 	cursor: pointer;
-	color: black;
+}
+
+.locationLaCss:hover{
 }
 .locLaNameLabel:hover{
-	background-color:  #fca35b;
-	border-radius : 20px;
+
 }
 /*중단 locationLa 이벤트 놈들*/
-/*중단 locationType 이벤트 놈들*/
+
+/*
+  position: sticky;
+  top: 80px;
+
+*/
+/*중단 locationS 이벤트 놈들*/
 #locationSNameForm input[type="checkbox"] {
    display:none;
  }
 #locationSNameForm{
+	width: 400px;
+	height : 100%;
+	background-color: orangeRed;
+	padding: 10px;
+}
+.locationSStar{
+	padding: 10px;
+	font-size: 20px;
 	font-weight: bold;
 }
 .locationTypeCss{
-	padding:10px 5px;
-	color: black;
+	
 }
-/*중단 locationType 이벤트 놈들*/
+.locationSDiv{
+	
+}
+/*중단 locationS 이벤트 놈들*/
+
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+#typeStickyBox{
+  position: sticky;
+  top: 80px;
+  background-color:white;
+  width: 100%;
+  height: auto;
+}
+
+/*중단 TypeLa 이벤트 놈들*/
 #typeLaNameSelect input[type="checkbox"] {
    display:none;
  }
- #typeSNameForm input[type="checkbox"] {
+#typeLaNameSelect{
+	width: 100%;
+	max-width: 1200px;
+	margin:auto;
+	font-size:20px;
+	padding :5px;
+	font-weight: bold;
+	display: flex;
+	align-items: center;
+	justify-content: center;	
+}
+.typeLaNameLabel{
+	padding :5px 5px; 
+	cursor: pointer;
+}
+.typeLaNameLabel:hover{
+	background-color:  rgb(253, 207, 170);
+	border-radius : 20px;
+}
+.typeLaCss{
+	padding :5px 5px;
+	margin : 0px 5px;
+	cursor: pointer;
+}
+.typeLaCss:hover{
+	background-color:  rgb(253, 207, 170);
+	border-radius : 20px;
+}
+ /*중단 TypeLa 이벤트 놈들*/
+ 
+ 
+#typeSNameForm input[type="checkbox"] {
    display:none;
  }
+#typeSNameForm{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: white;
+	font-weight: bold;
+	font-size: 18px;
+	width: 100%;
+}
+.typeSCss{
+	padding :5px 10px;
+	margin : 1px 2px;
+	cursor: pointer;
+}
+.typeSCss:hover {
+	background-color:  rgb(253, 207, 170);
+	border-radius : 20px;
+}
  
