--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 body {
-  background-color:#e6e1e1;
+  background-color:#eff7fb;
 }
 .container {
   align-items: flex-start;
@@ -22,7 +22,7 @@ body {
 }
 .membership-card {
   display: flex;
-  background-color: white;
+  background-color: #ffffff;
   border-radius: 20px;
   margin: 20px;
   width: 480px;
@@ -36,7 +36,7 @@ body {
   margin: 20px;
 }
 .membership-name {
-	background-color :orange;
+  color:#2a9d8f;
   font-size: 20px;
   white-space: nowrap; 
   overflow: hidden; 
@@ -64,6 +64,7 @@ body {
 .membership-info h2  {
   margin-left: 10px;
   width: 100%;
+  font-size: 13px;
 }
 .user-img {
   border-radius: 50%;
@@ -79,7 +80,7 @@ body {
   display: flex;
   white-space: nowrap; 
   overflow: hidden; 
-  background-color: red;
+ 
 }
 .typeList {
   background-color:#F4F4F4;
