--- a/src/main/resources/static/css/memberDelete.css
+++ b/src/main/resources/static/css/memberDelete.css
@@ -1,178 +1,179 @@
 @charset "UTF-8";
 /* 헤더 nav */
 #LOGO {
-  font-size: 1rem;
+	font-size: 1rem;
 }
 
 nav {
-  background-color: #333;
-  text-align: center;
-  display: flex;
-  justify-content: space-between;
-  padding: 5px;
+	overflow: hiddlen;
+	white-space: nowrap;
+	background-color: #333;
+	text-align: center;
+	display: flex;
+	justify-content: space-between;
+	padding: 5px;
 }
 
 nav div {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 nav a {
-  color: #fff;
-  text-decoration: none;
-  padding: 10px 20px;
-  display: inline-block;
+	color: #fff;
+	text-decoration: none;
+	padding: 10px 20px;
+	display: inline-block;
 }
 
 nav a:hover {
-  background-color: #575757;
+	background-color: #575757;
 }
 
 /* 헤더 nav */
-
 .header_menu {
-  color: #fff;
-  text-decoration: none;
-  padding: 10px 20px;
-  display: inline-block;
+	color: #fff;
+	text-decoration: none;
+	padding: 10px 20px;
+	display: inline-block;
 }
 
 .header_menu:hover {
-  background-color: #575757;
+	background-color: #575757;
 }
+
 body {
-  font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
+	font-family: Arial, sans-serif;
+	background-color: #f4f4f4;
 }
 
 h1 {
-  font-size: 1.5rem;
-  font-weight: bolder;
+	font-size: 1.5rem;
+	font-weight: bolder;
 }
 
 h2 {
-  font-size: 1rem;
-  font-weight: 700;
+	font-size: 1rem;
+	font-weight: 700;
 }
 
 strong {
-  font-weight: bolder;
+	font-weight: bolder;
 }
 
-.container > * {
-  margin-bottom: 20px;
+.container>* {
+	margin-bottom: 20px;
 }
 
 .container {
-  max-width: 800px;
-  min-width: 800px;
-  margin: 20px auto;
-  padding: 20px;
-  background: #fff;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	max-width: 800px;
+	min-width: 800px;
+	margin: 20px auto;
+	padding: 20px;
+	background: #fff;
+	border-radius: 8px;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .warning {
-  background: #fff3cd;
-  border-left: 5px solid #ffeeba;
-  padding: 15px;
-  margin-bottom: 20px;
-  border-radius: 5px;
+	background: #fff3cd;
+	border-left: 5px solid #ffeeba;
+	padding: 15px;
+	margin-bottom: 20px;
+	border-radius: 5px;
 }
 
-.warning div > * {
-  padding-top: 10px;
-  padding-bottom: 10px;
+.warning div>* {
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
 
 .warning ul li {
-  padding-top: 10px;
+	padding-top: 10px;
 }
 
 .details {
-  background: #fff3cd;
-  border-left: 5px solid #ffeeba;
-  padding: 15px;
-  margin-bottom: 20px;
-  border-radius: 5px;
+	background: #fff3cd;
+	border-left: 5px solid #ffeeba;
+	padding: 15px;
+	margin-bottom: 20px;
+	border-radius: 5px;
 }
 
-.details div > * {
-  padding-top: 10px;
-  padding-bottom: 10px;
+.details div>* {
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
 
 .details ul li {
-  padding-top: 10px;
+	padding-top: 10px;
 }
 
 .post-retention {
-  background: #fff3cd;
-  border-left: 5px solid #ffeeba;
-  padding: 15px;
-  margin-bottom: 20px;
-  border-radius: 5px;
+	background: #fff3cd;
+	border-left: 5px solid #ffeeba;
+	padding: 15px;
+	margin-bottom: 20px;
+	border-radius: 5px;
 }
 
-.post-retention div > * {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  line-height: 1.7;
+.post-retention div>* {
+	padding-top: 10px;
+	padding-bottom: 10px;
+	line-height: 1.7;
 }
+
 .post-retention ul li {
-  padding-top: 10px;
+	padding-top: 10px;
 }
 
-.details,
-.post-retention,
-.external-services {
-  background: #e9ecef;
-  border-left: 5px solid #ced4da;
-  padding: 15px;
-  margin-bottom: 20px;
-  border-radius: 5px;
+.details, .post-retention, .external-services {
+	background: #e9ecef;
+	border-left: 5px solid #ced4da;
+	padding: 15px;
+	margin-bottom: 20px;
+	border-radius: 5px;
 }
 
 .confirmation {
-  background: #d4edda;
-  border-left: 5px solid #c3e6cb;
-  padding: 15px;
-  border-radius: 5px;
+	background: #d4edda;
+	border-left: 5px solid #c3e6cb;
+	padding: 15px;
+	border-radius: 5px;
 }
 
 .confirmation div {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
 }
 
 .confirmation p {
-  padding-top: 10px;
-  padding-bottom: 10px;
+	padding-top: 10px;
+	padding-bottom: 20px;
 }
 
 button {
-  background-color: #4caf50;
-  color: white;
-  padding: 10px 15px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  width: 20%;
+	background-color: #4caf50;
+	color: white;
+	padding: 10px 15px;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+	width: 20%;
 }
 
 #button {
-  background-color: #4caf50;
-  color: white;
-  padding: 10px 15px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  width: 50%;
+	background-color: #4caf50;
+	color: white;
+	padding: 10px 15px;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+	width: 50%;
 }
 
 #button:hover {
-  background-color: #45a049;
+	background-color: #45a049;
 }
