--- a/src/main/resources/static/css/mypage.css
+++ b/src/main/resources/static/css/mypage.css
@@ -1,168 +1,282 @@
 /* 기본 스타일 설정 */
 body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #f4f4f4;
+	font-family: Arial, sans-serif;
+	margin: 0;
+	padding: 0;
+	background-color: #f4f4f4;
 }
 
 /* 헤더 nav */
 nav {
-  background-color: #333;
-  display: flex;
-  justify-content: space-between;
-  padding: 5px;
+	overflow: hiddlen;
+	white-space: nowrap;
+	background-color: #333;
+	display: flex;
+	justify-content: space-between;
+	padding: 5px;
 }
 
 nav a {
-  color: #fff;
-  text-decoration: none;
-  padding: 10px 20px;
-  display: inline-block;
+	color: #fff;
+	text-decoration: none;
+	padding: 10px 20px;
+	display: inline-block;
 }
 
 nav a:hover {
-  background-color: #575757;
+	background-color: #575757;
 }
 
 #LOGO {
-  font-size: 1rem;
+	font-size: 1rem;
 }
 
-.header_menu {
-  display: flex;
-  align-items: center;
+input[type=text] {
+	width: 60%;
+	height: 20px;
+	font-size: 1rem;
+	border: 0;
+	border-radius: 15px;
+	outline: none;
+	padding-left: 10px;
+	background-color: rgb(233, 233, 233);
+}
+
+.club-button {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
 
 /* 정보 컨테이너 */
 .info_container {
-  background-color: #fff;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  margin: 20px auto;
-  max-width: 600px;
-  padding: 20px;
-  text-align: center;
+	background-color: #fff;
+	border-radius: 8px;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+	margin: 20px auto;
+	max-width: 600px;
+	padding: 20px;
+	text-align: center;
+}
+
+.profile {
+	font-size: 1.5rem;
+	font-weight: bolder;
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
 
 .profile_img img {
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-  margin-bottom: 10px;
+	width: 200px;
+	height: 200px;
+	border-radius: 50%;
+	margin-bottom: 10px;
 }
 
 .profile_update {
-  align-items: center;
+	align-items: center;
+	justify-content: flex-start;
 }
 
-.profile_update > * {
-  margin-bottom: 20px;
+.profile_update>* {
+	margin-bottom: 20px;
+	font-weight: bolder;
 }
-
+.profile_manner {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	
+}
+.profile_manner p{
+	font-size: 1.2rem;
+	font-weight: bolder;
+	padding-right: 10px;
+}
 #updateSubmit {
-  background-color: #4caf50;
-  color: white;
-  padding: 10px 15px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  width: 50%;
+	background-color: #1b2a41;
+	color: white;
+	padding: 10px 15px;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+	width: 50%;
 }
 
 #updateSubmit:hover {
-  background-color: #45a049;
+	background-color: #324a5f;
 }
 
 /* 가입 대기중인 클럽 보기 */
 .container {
-  max-width: 600px;
-  margin: 20px auto;
-  padding: 20px;
-  background-color: #fff;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	max-width: 600px;
+	margin: 20px auto;
+	padding: 20px;
+	background-color: #fff;
+	border-radius: 8px;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-#all-club,
-#manage-club,
-#wait-club {
-  display: flex;
-  flex-direction: column;
+#all-club, #manage-club, #wait-club {
+	display: flex;
+	flex-direction: column;
 }
 
-#manage-club,
-#wait-club {
-  display: none;
+#manage-club, #wait-club {
+	display: none;
 }
 
 .membership-each {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border-bottom: 1px solid #ddd;
-  padding: 10px;
-  margin-bottom: 10px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	border-bottom: 1px solid #ddd;
+	padding: 10px;
+	margin-bottom: 10px;
 }
 
 .membership-card {
-  display: none; /* 기본적으로 카드 숨기기 */
-  padding: 20px;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  background-color: #f9f9f9;
-  margin-bottom: 20px;
+	display: none; 
+	padding: 20px;
+	border: 1px solid #ddd;
+	border-radius: 8px;
+	background-color: #f9f9f9;
+	margin-bottom: 20px;
+	overflow: hiddlen;
+	white-space: nowrap;
 }
 
 .membership-img {
-  width: 100px; /* 이미지의 고정된 너비 */
-  height: 100px; /* 이미지의 고정된 높이 */
-  object-fit: cover; /* 이미지 비율 유지 */
-  border-radius: 8px;
-  margin-right: 10px;
+	width: 100px; 
+	height: 100px; 
+	object-fit: cover; 
+	border-radius: 8px;
+	border: 2px solid #ddd;
+	
 }
 
-.membership-create{
-  padding: 20px;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  background-color: #f9f9f9;
-  margin-bottom: 20px;
+.membership-create {
+	padding: 20px;
+	border: 1px solid #ddd;
+	border-radius: 8px;
+	background-color: #f9f9f9;
+	margin-bottom: 20px;
 }
 
 .membership-each {
-  display: flex;
-  align-items: center;
+	display: flex;
+	align-items: center;
 }
 
 .membership-String {
-  flex: 1;
+	flex: 1;
 }
 
 .membership-String p {
-  margin: 0;
-  padding: 5px 0;
+	margin: 0;
+	padding: 5px 0;
 }
 
 /* 버튼 스타일 */
-#make-club,
-#all-club-button,
-#manage-club-button,
-#wait-club-button,
-#update-club {
-background-color : gray;
-color:white;
-  padding: 10px 20px;
-  margin: 5px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 16px;
+#make-club, #all-club-button, #manage-club-button, #wait-club-button,
+	#update-club{
+	width: 100%;
+	background-color: #0c1821;
+	color: white;
+	border: none;
+	border-radius: 5px;
+	cursor: pointer;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 10px 10px;
+	margin: 10px 5px 20px 5px;
+	overflow: hiddlen;
+	white-space: nowrap;
 }
 
-#all-club-button:hover,
-#manage-club-button:hover,
-#wait-club-button:hover,
-#update-club-button:hover {
-  background-color: black;
+#all-club-button:hover, #manage-club-button:hover, #wait-club-button:hover,
+	#update-club-button:hover ,#make-club:hover,#update-club:hover {
+	background-color: #ccc9dc;
+	color: black;
+	font-weight: bolder;
+	overflow: hiddlen;
+	white-space: nowrap;
+	
+}
+
+
+:root {
+	--btn-width: 30vw;
+	--btn-min-width: 10px;
+	--btn-height: 15vh;
+	--btn-min-height: 5px;
+	--menu-height: calc(var(--btn-height)* 4);
+	--menu-min-height: calc(var(--btn-min-height)* 2);
+	--border-rad: 5px;
+	--font-size: 2vw;
+}
+
+#toggle_container {
+	margin-top: 10vh;
+	flex-flow: column;
+}
+
+#label {
+	min-width: var(--btn-min-width);
+	height: 50px;
+	min-height: var(--btn-min-height);
+	background-color: whitesmoke;
+	border-radius: var(--border-rad);
+	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 1.1rem;
+	font-weight: bolder;
+	margin-bottom: 10px;
+	overflow: hiddlen;
+	white-space: nowrap;
+}
+
+#arrow {
+	width: calc(var(--btn-height)* 0.4);
+	height: calc(var(--btn-height)* 0.4);
+	border-radius: 100%;
+	position: relative;
+	transition: 0.3s ease-in-out;
+}
+
+#menu {
+	min-width: var(--btn-min-width);
+	background-color: whitesmoke;
+	border-radius: var(--border-rad);
+	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+	top: calc(var(--btn-height)+ 3vh);
+	display: flex;
+	flex-flow: column;
+	justify-content: center;
+	align-items: center;
+	opacity: 0;
+	overflow: hidden;
+	transition: 0.5s ease-in-out;
+}
+
+#toggle:checked ~ #menu {
+	min-height: var(--menu-min-height);
+	opacity: 1;
+}
+
+#toggle:checked ~ #label>#arrow {
+	transform: rotate(180deg);
+}
+
+.menu-name {
+	width: var(--btn-width);
+	color: rgb(0, 0, 0);
+	text-decoration: none;
+	font-size: var(--font-size);
+	font-weight: 900;
+	line-height: 20px;
 }
