--- a/src/main/resources/static/css/userInfo.css
+++ b/src/main/resources/static/css/userInfo.css
@@ -4,6 +4,7 @@ main {
   justify-content: center;
   align-items: center;
 }
+
 #container {
   max-width: 600px;
   min-width: 600px;
@@ -14,6 +15,7 @@ main {
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
+
 #section {
   display: flex;
   align-items: center;
@@ -29,34 +31,34 @@ main {
   border-radius: 50px;
   margin-bottom: 50px;
 }
-#rating {
-  display: flex;
-  justify-content: center;
+#rating{
+	display: flex;
+	justify-content: center;
 }
-#emoji-plus {
-  color: green;
+#emoji-plus{
+	color: green;
 }
-#emoji-minus {
-  color: red;
+#emoji-minus{
+	color: red;
 }
-.rating-btn {
-  align-items: center;
-  flex-direction: column;
-  display: flex;
-  font-weight: bold;
-  border: none;
-  background-color: white;
-  margin: 0px 10px;
-  cursor: pointer;
+.rating-btn{
+	align-items: center;
+    flex-direction: column;
+    display: flex;
+    font-weight: bold;
+	border: none;
+	background-color: white;
+	margin: 0px 10px;
+	cursor: pointer;
 }
-#plus-minus {
-  text-align: center;
+#plus-minus{
+	text-align: center;
 }
 
-#minus-btn {
-  position: relative;
-  top: 6.5px;
-}
+#minus-btn{
+	position: relative;
+    top: 6.5px;
+}    
 
 .memberInfo_div h1 {
   font-size: 1.5rem;
@@ -74,13 +76,13 @@ main {
   padding-top: 30px;
   align-items: center;
 }
-.manner {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.manner{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
-.manner > p {
-  margin-right: 5px;
+.manner > p{
+	margin-right: 5px;
 }
 .group {
   margin-top: 20px;
@@ -88,6 +90,7 @@ main {
 .group span h1 {
   font-weight: bolder;
 }
+
 .info_group div h1 {
   font-size: 1rem;
   font-weight: bolder;
@@ -101,6 +104,7 @@ main {
   font-size: 1.2rem;
   font-weight: bolder;
 }
+
 .info_group h3 {
   width: 300px;
   height: 100px;
@@ -109,13 +113,15 @@ main {
   text-wrap: wrap;
   overflow-wrap: break-word;
 }
+
 #section2 {
-  display: flex;
-  padding: 20px;
-  background-color: #f9f9f9;
-  flex-direction: column;
-  justify-content: space-between;
+    display: flex;
+    padding: 20px;
+    background-color: #f9f9f9;
+    flex-direction: column;
+    justify-content: space-between;
 }
+
 
 .section2_memberInfo h1 {
   font-size: 1rem;
@@ -123,41 +129,36 @@ main {
   padding-top: 20px;
   padding-bottom: 20px;
 }
+
 .club_info {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
   height: 100px;
 }
+
 .club_info div {
   width: 104px;
   display: flex;
   flex-direction: column;
 }
+
 .club_img {
   width: 50px;
   height: 50px;
-  object-fit: cover;
-  border-radius: 8px;
-  border: 2px solid #ddd;
-}
 
-.club_img_none {
-  width: 50px;
-  height: 50px;
   object-fit: cover;
   border-radius: 8px;
   border: 2px solid #ddd;
-  margin-bottom: 18px;
-  opacity: 0.3;
 }
-.items-container {
+.club_box {
   justify-content: center;
   align-items: center;
 }
 .club_box p {
   font-weight: bolder;
 }
+
 .club_info p {
   font-size: 0.8rem;
   margin-top: 5px;
